--- a/albumstyles.css
+++ b/albumstyles.css
@@ -4,3 +4,11 @@ h1,h2,h3,h4,h5,h6 {
 td {
     text-align: center;
 }
+li {
+    font-style: italic;
+}
+h1,h2 {
+    font-family: 'AvaraBold'; 
+   font-weight: normal; 
+   font-style: normal; 
+}
